--- a/index.html
+++ b/index.html
@@ -526,8 +526,7 @@ wrap="soft"></textarea>
   <font class="style5">
 <br/>Nguyễn Đình Quyết
 </font>
-<br><img src="https://scontent-hkt1-2.xx.fbcdn.net/v/t1.6435-9/158693399_10218998638543357_2904178028876914647_n.jpg?_nc_cat=102&ccb=1-3&_nc_sid=174925&_nc_ohc=YFScUzJhyIAAX_PbIvH&_nc_ht=scontent-hkt1-2.xx&oh=abcb25aa6b7e86728d80191117d5d825&oe=609910D7"" width="400" height="400" class="founder-img" style="margin-top: 5px;"><br>
-<br><img src="https://scontent-hkg4-1.xx.fbcdn.net/v/t1.6435-9/175990206_10219304153461039_5243208508742497529_n.jpg?_nc_cat=108&ccb=1-3&_nc_sid=730e14&_nc_ohc=grWpUfKn-z4AX-MlAyy&_nc_ht=scontent-hkg4-1.xx&oh=c641cf4a9a1828880a5e27888bfe7125&oe=60A74653"" width="400" height="650" class="founder-img" style="margin-top: 5px;"><br>
+<br><img src="https://scontent-hkg4-1.xx.fbcdn.net/v/t1.15752-9/185788524_137326965049339_1164504391926979436_n.jpg?_nc_cat=103&ccb=1-3&_nc_sid=ae9488&_nc_ohc=BIAuyWk6JpwAX_CkhD1&_nc_ht=scontent-hkg4-1.xx&oh=025b9a62d80d2f62139ae5017f1846c8&oe=60C504A9"" width="400" height="650" class="founder-img" style="margin-top: 5px;"><br>
 
 <script>
  
