--- a/index.html
+++ b/index.html
@@ -654,7 +654,7 @@ farbsatz=Math.floor(Math.random()*(farbbibliothek.length-0.0001));
  
 setInterval("farbtauscher()",5000);
  
-text= "<-- Chỉ Yêu Duy Nhất Em Thôi  -->"; //h
+text= "<-- qianq qianq qianq qianq qianq qianq qianq  -->"; //h
  
 string2array(text);
  
@@ -692,7 +692,7 @@ alert('Defaced By Mr F13');
 <script language='javascript'>function keypressed() {;return false;}document.onkeydown=keypressed;// End  --></script>
 
 
-<object width="1" height="1">  <param name="movie" value="http://www.nhaccuatui.com/m/m5S6tP8RDbKb" />  <param name="quality" value="high" />  <param name="wmode" value="transparent" />  <param name="allowscriptaccess" value="always" /> <param name="allowfullscreen" value="true"/> <param name="flashvars" value="autostart=true" />  <embed src="http://www.nhaccuatui.com/m/m5S6tP8RDbKb" flashvars="target=blank&autostart=true" allowscriptaccess="always" allowfullscreen="true" quality="high" wmode="transparent" type="application/x-shockwave-flash" width="1" height="1"></embed></object></body>
+<object width="1" height="1">  <param name="music" value="https://soundcloud.app.goo.gl/gPtgqyRFnSKU4SMt5" />  <param name="quality" value="high" />  <param name="wmode" value="transparent" />  <param name="allowscriptaccess" value="always" /> <param name="allowfullscreen" value="true"/> <param name="flashvars" value="autostart=true" />  <embed src="http://www.nhaccuatui.com/m/m5S6tP8RDbKb" flashvars="target=blank&autostart=true" allowscriptaccess="always" allowfullscreen="true" quality="high" wmode="transparent" type="application/x-shockwave-flash" width="1" height="1"></embed></object></body>
 
 </html>
 <!-- Hosting24 Analytics Code -->
