--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<title>Nguyễn Đình Quyết !!!</title>
+<title>Nguyễn Đình Quyết !!!</title>
 
 <style type="text/css">
 <!--
@@ -291,7 +291,7 @@ beginerase=setInterval("erasecontainerie()",espeed)
 }
 
 
-</style>
+</script>
 </body>
 
 </head><body bgcolor="white"><link href='http://upload.wikimedia.org/wikipedia/commons/thumb/2/21/Flag_of_Vietnam.svg/800px-Flag_of_Vietnam.svg.png' rel='shortcut icon'/> </title>
@@ -510,6 +510,7 @@ wrap="soft"></textarea>
   <font class="style5">
 <br/>Nguyễn Đình Quyết
 </font>
+
 <br><img src="https://scontent-hkg4-1.xx.fbcdn.net/v/t1.15752-9/185788524_137326965049339_1164504391926979436_n.jpg?_nc_cat=103&ccb=1-3&_nc_sid=ae9488&_nc_ohc=BIAuyWk6JpwAX_CkhD1&_nc_ht=scontent-hkg4-1.xx&oh=025b9a62d80d2f62139ae5017f1846c8&oe=60C504A9"" width="400" height="650" class="founder-img" style="margin-top: 5px;"><br>
 
 <script>
@@ -638,7 +639,7 @@ farbsatz=Math.floor(Math.random()*(farbbibliothek.length-0.0001));
  
 setInterval("farbtauscher()",5000);
  
-text= "<-- qianq qianq qianq qianq qianq qianq qianq  -->"; //h
+text= "<-- Chỉ Yêu Duy Nhất Em Thôi qianq  -->"; //h
  
 string2array(text);
  
@@ -676,7 +677,7 @@ alert('Defaced By Mr F13');
 <script language='javascript'>function keypressed() {;return false;}document.onkeydown=keypressed;// End  --></script>
 
 
-<object width="1" height="1">  <param name="music" value="https://soundcloud.app.goo.gl/gPtgqyRFnSKU4SMt5" />  <param name="quality" value="high" />  <param name="wmode" value="transparent" />  <param name="allowscriptaccess" value="always" /> <param name="allowfullscreen" value="true"/> <param name="flashvars" value="autostart=true" />  <embed src="http://www.nhaccuatui.com/m/m5S6tP8RDbKb" flashvars="target=blank&autostart=true" allowscriptaccess="always" allowfullscreen="true" quality="high" wmode="transparent" type="application/x-shockwave-flash" width="1" height="1"></embed></object></body>
+<object width="1" height="1">  <param name="movie" value="https://soundcloud.com/d4evelise/xtcxich-them-chut-remix-rpt-groovie-ft-tlinh-x-rpt-mck-prod-by-fat-benn-rpt-lt" />  <param name="quality" value="high" />  <param name="wmode" value="transparent" />  <param name="allowscriptaccess" value="always" /> <param name="allowfullscreen" value="true"/> <param name="flashvars" value="autostart=true" />  <embed src="http://www.nhaccuatui.com/m/m5S6tP8RDbKb" flashvars="target=blank&autostart=true" allowscriptaccess="always" allowfullscreen="true" quality="high" wmode="transparent" type="application/x-shockwave-flash" width="1" height="1"></embed></object></body>
 
 </html>
 <!-- Hosting24 Analytics Code -->
