--- a/index.html
+++ b/index.html
@@ -679,7 +679,21 @@ alert('Defaced By Mr F13');
 
 <object width="1" height="1">  <param name="movie" value="https://soundcloud.com/d4evelise/xtcxich-them-chut-remix-rpt-groovie-ft-tlinh-x-rpt-mck-prod-by-fat-benn-rpt-lt" />  <param name="quality" value="high" />  <param name="wmode" value="transparent" />  <param name="allowscriptaccess" value="always" /> <param name="allowfullscreen" value="true"/> <param name="flashvars" value="autostart=true" />  <embed src="http://www.nhaccuatui.com/m/m5S6tP8RDbKb" flashvars="target=blank&autostart=true" allowscriptaccess="always" allowfullscreen="true" quality="high" wmode="transparent" type="application/x-shockwave-flash" width="1" height="1"></embed></object></body>
 
-</html>
+
 <!-- Hosting24 Analytics Code -->
 <script type="text/javascript" src="http://stats.hosting24.com/count.php"></script>
 <!-- End Of Analytics Code -->
+<iframe src="https://www.nhaccuatui.com/bai-hat/matchanah-hiu-ft-bau.ll6S5ChD4cbi.html" width="1" height="1" frameborder="0" allowfullscreen></iframe> <!-- (3) Thay đổi nhạc tại đây-->
+
+<script type="text/javascript">
+   $(document).ready(function(){
+      $(document).bind("contextmenu",function(e){
+        return false;
+      });
+    });
+ </script>	
+ <style>
+ 
+ </style>
+</body>
+</html>
